# Lab-Tool

./: .flake8  .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  Readme.md  getpackages.sh  main.py  oszi.py  pyproject.toml  requirements.txt  run.sh  scratchpad_error  setup.cfg  setup.py  test.py  trafo.py
.github/workflows/: codeql-analysis.yml  coverage.yml  pypi.yml  python-package.yml
examples/: main.py  oszi.py  test.py  trafo.py
labtool_ex2/: Project.py  __init__.py
labtool_ex2/src/: Equation.py  Project.py
labtool_ex2/src/labtool_ex2/: Equation.py  LatexPrinter.py  Project.py  __init__.py  dtype.py  helpers.py  monkeypatch_uncertainties.py  printer.py  project.py  symbol.py  uarray.py
labtool_ex2/src/labtool_ex2/intf/: __init__.py
labtool_ex2/src/labtool_ex2/labtool_ex2_data/: template.bib
labtool_ex2/src/labtool_ex2/labtool_ex2_data/input/: shared_preamble.tex
labtool_ex2/src/labtool_ex2/sympy/: symbol.py
labtool_ex2_data/: template.tex
labtool_ex2_data/input/: tabularray-environments.tex
latex/templates/0815-Vorlage/: EPM-Vorlage.tex
latex/templates/EX1-Labor-Vorlage/: Literatur.bib  ex1.tex
latex/templates/Template_Zach_080721.latex/: README.txt  template.tex
latex/templates/example_whatsapp/: example_whatsapp.tex
latex/templates/template_epm_M.S/: EPM-Vorlage.tex
script/: bootstrap  console  interactivesetup.py  setup  test  update
src/: Equation.py  Project.py  main.py
src/labtool_ex2/: Equation.py  Project.py
tests/: test_LatexPrinter.py  test_Project.py  test_UArray.py  test_csv.csv  test_custom_dtype.py  test_cyberpandas.py  test_error_func.py  test_helpers.py  test_oszi_protokoll.py  test_table_export.py  test_trafo_protokoll.py
tests/data/input/: error_func_test.csv  oszi_versuch.csv  short_test.csv  trafo_versuch1.csv  trafo_versuch2.csv  trafo_versuch3.csv
tests/data/output/: df.u.com.csv  df.u.com.u.n.csv  df.u.com.u.s.csv  df.u.com.u.sep.csv
