[metadata]
name = labtool_ex2
description = Lab-Tool - A Python based lab-data visualization tool
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1
author = Biermeister
author_email = bierbunker42@gmail.com
url = https://github.com/Bierbunker/Lab-Tool
project_urls =
    Bug Tracker = https://github.com/Bierbunker/Lab-Tool/issues
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    labtool_ex2
install_requires =
    pandas
    numpy
    matplotlib
    uncertainties
    sympy >= 1.11
    lmfit
    uncertainties
    numdifftools
    scikit-learn
python_requires = >=3.9
package_dir =
    =labtool_ex2/src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]

[flake8]
max-line-length = 160
per-file-ignores =
    ./examples/*:F821,E741,E402
